@@ -5,6 +5,10 @@ Version 1.7.9
        config file is invalid. (Stefan)
 - BUG: Issue #398: Copied files don't get reverted
        to recycle bin. (Stefan)
+- BUG: Issue #399: Selecting an url from the
+       repbrowser clears the url. (Stefan)
+- BUG: Issue #400: repo browser crash when
+       refreshing. (Stefan)
 
 Version 1.7.8
 - BUG: Issue #297: "Show changes as unified diff"
